--- a/Contato/contato.css
+++ b/Contato/contato.css
@@ -24,12 +24,23 @@ fieldset {
     padding: 15px 0px;
 }
 
+legend{
+    font-size: 2em;
+}
+
 /* Elementos do input */
 input {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
     color: #59429d;
     margin: 0px 70px;
+}
+
+select{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    margin: 0px 70px;
+    color: darkcyan;
 }
 
 /* Elementos do textarea */
@@ -40,7 +51,8 @@ textarea{
 
 /* Elementos do botão */
 button {
-    margin-left: 20%;
+    margin-left: 20px;
+    margin: 10px;
     padding: 10px;
     border: none;
 }
